finished  header and banner section with responsive styles

--- a/index.html
+++ b/index.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let's Explore World</title>
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/responsive.css">
+    <script src="https://kit.fontawesome.com/1cf4ffe29c.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <h3>Hi congratulations for your new projects</h3>
+    <!--Header Section-->
+    <header class="header">
+        <!--Nav section-->
+        <nav class="nav-container">
+            <div class="header-logo">
+                <img src="Images/Group 40071 (2).png" alt="">
+                <p><span>Let's</span> E<span class="lets">x</span>pl<span class="world">o</span>re<span
+                        class="world">_World</span></p>
+            </div>
+            <div class="header-content">
+                <div class="home"> <a href="">Home</a></div>
+                <a href="">Packages</a>
+                <a href="">Testimonial</a>
+                <a href="">Blog</a>
+                <a href="">Contact</a>
+            </div>
+        </nav>
+        <i class="fa-solid fa-bars icons"></i>
+    </header>
+    <main>
+        <!--Banner Section-->
+        <section class="banner">
+            <div class="image"><img src="Images/Group 13 (1) (1).png" alt=""></div>
+            <div class="banner-section">
+                <div class="banner-head">
+                    <h3>Explore Your Travel</h3>
+                    <p>Let's Explore-World is an online booking platform <br> re-imagined for companies who often book <br> meetings, events and incentive trips.</p>
+                </div>
+                <div class="input-content">
+                    <div class="input1"><input placeholder="Where go" type="text"></div>
+                    <div class="input2">
+                        <i class="fa-solid fa-chevron-down down-fa"></i>
+                        <input placeholder="When" type="text">
+
+                    </div>
+                    <div class="input3">
+                        <i class="fa-solid fa-chevron-down down-fa"></i>
+                        <input placeholder="Select Type" type="text">
+                    </div>
+                    <div class="input4">
+                        <i class="fa-solid fa-magnifying-glass glass"></i>
+                        <input class="btn-primary" placeholder="Find Now" type="text">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--Tour Section-->
+        <section>
+            <div></div>
+            <div></div>
+        </section>
+    </main>
+    <footer></footer>
 </body>
+
 </html>
