Finished Tour Section and responsive styles

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="banner-section">
                 <div class="banner-head">
                     <h3>Explore Your Travel</h3>
-                    <p>Let's Explore-World is an online booking platform <br> re-imagined for companies who often book <br> meetings, events and incentive trips.</p>
+                    <p>Let's Explore_World is an online booking platform <br> re-imagined for companies who often book <br> meetings, events and incentive trips.</p>
                 </div>
                 <div class="input-content">
                     <div class="input1"><input placeholder="Where go" type="text"></div>
@@ -58,9 +58,23 @@
             </div>
         </section>
         <!--Tour Section-->
-        <section>
-            <div></div>
-            <div></div>
+        <section class="tour-section">
+            <div class="tour-text">
+                    <h3>Our Popular Tours</h3>
+                <p>All Go Ahead Tours include:</p>
+                <ul>
+                    <li>Smaller groups, capped at 38 travelers</li>
+                    <li>Authentic meals, with breakfast included daily</li>
+                    <li>Handpicked, staff-vetted hotels</li>
+                    <li>Comfortable transportation</li>
+                    <li>Tour Director & local guides</li>
+                </ul>
+                <p>Your safety and well-being has never been more important <br> than it is today. This is our Travel-Ready Approach for you. You <br> can share your love of travel with friends, family, and neighbors <br> as part of our Group Coordinator program and enjoy the same EF <br> benefits Group Leaders love.</p>
+                <button class="btn-primary btn">Read More</button>
+            </div>
+            <div class="tour-image">
+                <img src="Images/Rectangle 4.png" alt="">
+            </div>
         </section>
     </main>
     <footer></footer>
