Reduced Tour Top Border

--- a/index.html
+++ b/index.html
@@ -69,11 +69,26 @@
                     <li>Comfortable transportation</li>
                     <li>Tour Director & local guides</li>
                 </ul>
-                <p>Your safety and well-being has never been more important <br> than it is today. This is our Travel-Ready Approach for you. You <br> can share your love of travel with friends, family, and neighbors <br> as part of our Group Coordinator program and enjoy the same EF <br> benefits Group Leaders love.</p>
+                <p>Your safety and well-being has never been more important  than it is today. This is our Travel-Ready Approach for you. You  can share your love of travel with friends, family, and neighbors  as part of our Group Coordinator program and enjoy the same EF  benefits Group Leaders love.</p>
                 <button class="btn-primary btn">Read More</button>
             </div>
             <div class="tour-image">
                 <img src="Images/Rectangle 4.png" alt="">
+            </div>
+        </section>
+        <!--Destination Section-->
+        <section>
+            <div>
+
+            </div>
+            <div>
+                <div><img src="Images/Rectangle 5.png" alt=""></div>
+                <div><img src="Images/Rectangle 8.png" alt=""></div>
+                <div><img src="Images/Rectangle 6.png" alt=""></div>
+                <div><img src="Images/Rectangle 7.png" alt=""></div>
+                <div><img src="Images/Rectangle 9.png" alt=""></div>
+                <div><img src="Images/Rectangle 11.png" alt=""></div>
+                <div><img src="Images/Rectangle 10.png" alt=""></div>
             </div>
         </section>
     </main>
