--- a/index.html
+++ b/index.html
@@ -77,8 +77,19 @@
             </div>
         </section>
         <!--Destination Section-->
-        
-        
+        <section>
+            <div>
+            </div>
+            <div>
+                <div><img src="Images/Rectangle 5.png" alt=""></div>
+                <div><img src="Images/Rectangle 8.png" alt=""></div>
+                <div><img src="Images/Rectangle 6.png" alt=""></div>
+                <div><img src="Images/Rectangle 7.png" alt=""></div>
+                <div><img src="Images/Rectangle 9.png" alt=""></div>
+                <div><img src="Images/Rectangle 11.png" alt=""></div>
+                <div><img src="Images/Rectangle 10.png" alt=""></div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
