finished destination image input

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <div class="banner-section">
                 <div class="banner-head">
                     <h3>Explore Your Travel</h3>
-                    <p>Let's Explore_World is an online booking platform <br> re-imagined for companies who often book <br> meetings, events and incentive trips.</p>
+                    <p>Let's Explore_World is an online booking platform <br> re-imagined for companies who often book
+                        <br> meetings, events and incentive trips.</p>
                 </div>
                 <div class="input-content">
                     <div class="input1"><input placeholder="Where go" type="text"></div>
@@ -60,7 +61,7 @@
         <!--Tour Section-->
         <section class="tour-section">
             <div class="tour-text">
-                    <h3>Our Popular Tours</h3>
+                <h3>Our Popular Tours</h3>
                 <p>All Go Ahead Tours include:</p>
                 <ul>
                     <li>Smaller groups, capped at 38 travelers</li>
@@ -69,7 +70,10 @@
                     <li>Comfortable transportation</li>
                     <li>Tour Director & local guides</li>
                 </ul>
-                <p>Your safety and well-being has never been more important  than it is today. This is our Travel-Ready Approach for you. You  can share your love of travel with friends, family, and neighbors  as part of our Group Coordinator program and enjoy the same EF  benefits Group Leaders love.</p>
+                <p>Your safety and well-being has never been more important than it is today. This is our Let's
+                    Explore_World approach for you. You can share your love of travel with friends, family, and
+                    neighbors as part of our Group Coordinator program and enjoy the same LEW benefits Group Leaders
+                    love.</p>
                 <button class="btn-primary btn">Read More</button>
             </div>
             <div class="tour-image">
@@ -77,17 +81,40 @@
             </div>
         </section>
         <!--Destination Section-->
-        <section>
-            <div>
+        <section class="destination-section">
+            <div class="destination-text">
+                <h3>Choose Your Destination</h3>
+                <p>Let's Explore_World's Senior Tours Collection encompasses a wide range of destinations and themes,
+                    catering to the diverse interests of senior travelers.</p>
             </div>
-            <div>
-                <div><img src="Images/Rectangle 5.png" alt=""></div>
-                <div><img src="Images/Rectangle 8.png" alt=""></div>
-                <div><img src="Images/Rectangle 6.png" alt=""></div>
-                <div><img src="Images/Rectangle 7.png" alt=""></div>
-                <div><img src="Images/Rectangle 9.png" alt=""></div>
-                <div><img src="Images/Rectangle 11.png" alt=""></div>
-                <div><img src="Images/Rectangle 10.png" alt=""></div>
+            <div class="destination-image">
+                <div class="first">
+                    <div>
+                        <img id="img1" src="Images/Rectangle 5.png" alt="">
+                    </div>
+                    <div>
+                        <img id="img2" src="Images/Rectangle 8.png" alt="">
+                    </div>
+                </div>
+                <div class="second">
+                    <div>
+                        <img id="img3" src="Images/Rectangle 6.png" alt="">
+                    </div>
+                    <div>
+                        <img id="img4" src="Images/Rectangle 7.png" alt="">
+                    </div>
+                    <div>
+                        <img id="img5" src="Images/Rectangle 9.png" alt="">
+                    </div>
+                </div>
+                <div class="third">
+                    <div>
+                        <img id="img6" src="Images/Rectangle 11.png" alt="">
+                    </div>
+                    <div>
+                        <img id="img7" src="Images/Rectangle 10.png" alt="">
+                    </div>
+                </div>
             </div>
         </section>
     </main>
