finished destination laptop view

--- a/index.html
+++ b/index.html
@@ -90,29 +90,36 @@
             <div class="destination-image">
                 <div class="first">
                     <div>
-                        <img id="img1" src="Images/Rectangle 5.png" alt="">
+                        <img class="img1" src="Images/Rectangle 5.png" alt="">
+                        <div class="img-div1"><h3 class="maldives">Maldives</h3></div>
                     </div>
                     <div>
-                        <img id="img2" src="Images/Rectangle 8.png" alt="">
+                        <img class="img2" src="Images/Rectangle 8.png" alt="">
+                        <div class="img-div2"><h3 class="indonesia">Indonesia</h3></div>
                     </div>
                 </div>
                 <div class="second">
                     <div>
-                        <img id="img3" src="Images/Rectangle 6.png" alt="">
+                        <img class="img3" src="Images/Rectangle 6.png" alt="">
+                        <div class="img-div3"><h3 class="srilanka">Srilanka</h3></div>
                     </div>
                     <div>
-                        <img id="img4" src="Images/Rectangle 7.png" alt="">
+                        <img class="img4" src="Images/Rectangle 7.png" alt="">
+                        <div class="img-div4"><h3 class="america">North America</h3></div>
                     </div>
                     <div>
-                        <img id="img5" src="Images/Rectangle 9.png" alt="">
+                        <img class="img5" src="Images/Rectangle 9.png" alt="">
+                        <div class="img-div5"><h3 class="kasmir">Kashmir</h3></div>
                     </div>
                 </div>
                 <div class="third">
                     <div>
-                        <img id="img6" src="Images/Rectangle 11.png" alt="">
+                        <img class="img6" src="Images/Rectangle 11.png" alt="">
+                        <div class="img-div6"><h3 class="bangladesh">Bangladesh</h3></div>
                     </div>
                     <div>
-                        <img id="img7" src="Images/Rectangle 10.png" alt="">
+                        <img class="img7" src="Images/Rectangle 10.png" alt="">
+                        <div class="img-div7"><h3 class="bandarban">Bandarban</h3></div>
                     </div>
                 </div>
             </div>
