added choose style for laptop and mobile

--- a/index.html
+++ b/index.html
@@ -124,6 +124,31 @@
                 </div>
             </div>
         </section>
+        <!--Choose Section-->
+        <section class="choose-section">
+            <div class="choose-text">
+                <h3>Why Choose Us</h3>
+                <p>We take pride in offering top-notch services for all your travel needs. From travel adapters to portable chargers and luggage tags, we have got you covered for your every journey. Our range of travel adapters ensures that you can charge your devices effortlessly in any part of the world. With our adapters, you will stay connected and keep your gadgets fully charged, making your travel experiences stress-free and enjoyable.</p>
+            </div>
+            <div class="choose-card">
+                <div class="hotel">
+                    <img src="Images/hotel 1.png" alt="">
+                    <h4>Handpicked Hotels</h4>
+                    <p>There is a wide range of hotels whether you're looking for luxury accommodations, boutique hotels that suits your needs.</p>
+                </div>
+                <div class="map">
+                    <img src="Images/map 1.png" alt="">
+                    <h4>World Class Service</h4>
+                    <p>We are catering to specific niches such as adventure travel, luxury travel, eco-friendly travel, or cultural experiences.</p>
+                </div>
+                <div class="price">
+                    <img src="Images/price-tag 1.png" alt="">
+                    <h4>Best Price Guarantee</h4>
+                    <p>Our services can vary widely depending on several factors, including  the destination, the level of customization, and the overall quality of service. </p>
+                </div>
+            </div>
+        </section>
+        
     </main>
     <footer></footer>
 </body>
