--- a/index.html
+++ b/index.html
@@ -148,7 +148,42 @@
                 </div>
             </div>
         </section>
-        <!---->
+        <!--Upcoming Tour Section-->
+        <section class="upcoming-tour-section">
+            <div class="upcoming-tour">
+                <h3>Our Upcoming Tour</h3>
+                <p>allows you to create an event and invite attendees to book travel attached to an event. This streamlines and organizes travel while giving companies control and insight into their travel program.</p>
+            </div>
+            <div class="upcoming-list">
+                <div class="upcoming-image1">
+                    <img src="Images/sajek.jpg" alt="">
+                    <p>Sajek || 01 February 2024</p>
+                </div>
+                <div class="upcoming-image2">
+                    <img src="Images/sada-pathort.jpg" alt="">
+                    <p>Sada Pathor || 27 March 2024</p>
+                </div>
+                <div class="upcoming-image3">
+                    <img src="Images/download.jpg" alt="">
+                    <p>Italy || 01 June 2024</p>
+                </div>
+              
+            </div>
+            <div class="upcoming-list2">
+                <div class="upcoming-image4">
+                    <img src="Images/nilgiri.jpg" alt="">
+                    <p>Nilgiri || 09 August 2024</p>
+                </div>
+                <div class="upcoming-image5">
+                    <img src="Images/uk.jpg" alt="">
+                    <p>United Kingdom || 23 October 2024</p>
+                </div>
+                <div class="upcoming-image6">
+                    <img src="Images/pathor.jpg" alt="">
+                    <p>Bichnakandi || 01 December 2024</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
