fix responsive problem

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <section class="upcoming-tour-section">
             <div class="upcoming-tour">
                 <h3>Our Upcoming Tour</h3>
-                <p>allows you to create an event and invite attendees to book travel attached to an event. This streamlines and organizes travel while giving companies control and insight into their travel program.</p>
+                <p>We allows you to create an event and invite attendees to book travel attached to an event. This streamlines and organizes travel while giving companies control and insight into their travel program.</p>
             </div>
             <div class="upcoming-list">
                 <div class="upcoming-image1">
@@ -184,6 +184,7 @@
                 </div>
             </div>
         </section>
+       
     </main>
     <footer></footer>
 </body>
