finished Perfect place selection styles and responsive work

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 <div class="banner-head">
                     <h3>Explore Your Travel</h3>
                     <p>Let's Explore_World is an online booking platform <br> re-imagined for companies who often book
-                        <br> meetings, events and incentive trips.</p>
+                        <br> meetings, events and incentive trips.
+                    </p>
                 </div>
                 <div class="input-content">
                     <div class="input1"><input placeholder="Where go" type="text"></div>
@@ -91,35 +92,49 @@
                 <div class="first">
                     <div>
                         <img class="img1" src="Images/Rectangle 5.png" alt="">
-                        <div class="img-div1"><h3 class="maldives">Maldives</h3></div>
+                        <div class="img-div1">
+                            <h3 class="maldives">Maldives</h3>
+                        </div>
                     </div>
                     <div>
                         <img class="img2" src="Images/Rectangle 8.png" alt="">
-                        <div class="img-div2"><h3 class="indonesia">Indonesia</h3></div>
+                        <div class="img-div2">
+                            <h3 class="indonesia">Indonesia</h3>
+                        </div>
                     </div>
                 </div>
                 <div class="second">
                     <div>
                         <img class="img3" src="Images/Rectangle 6.png" alt="">
-                        <div class="img-div3"><h3 class="srilanka">Srilanka</h3></div>
+                        <div class="img-div3">
+                            <h3 class="srilanka">Srilanka</h3>
+                        </div>
                     </div>
                     <div>
                         <img class="img4" src="Images/Rectangle 7.png" alt="">
-                        <div class="img-div4"><h3 class="america">North America</h3></div>
+                        <div class="img-div4">
+                            <h3 class="america">North America</h3>
+                        </div>
                     </div>
                     <div>
                         <img class="img5" src="Images/Rectangle 9.png" alt="">
-                        <div class="img-div5"><h3 class="kasmir">Kashmir</h3></div>
+                        <div class="img-div5">
+                            <h3 class="kasmir">Kashmir</h3>
+                        </div>
                     </div>
                 </div>
                 <div class="third">
                     <div>
                         <img class="img6" src="Images/Rectangle 11.png" alt="">
-                        <div class="img-div6"><h3 class="bangladesh">Bangladesh</h3></div>
+                        <div class="img-div6">
+                            <h3 class="bangladesh">Bangladesh</h3>
+                        </div>
                     </div>
                     <div>
                         <img class="img7" src="Images/Rectangle 10.png" alt="">
-                        <div class="img-div7"><h3 class="bandarban">Bandarban</h3></div>
+                        <div class="img-div7">
+                            <h3 class="bandarban">Bandarban</h3>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -128,23 +143,30 @@
         <section class="choose-section">
             <div class="choose-text">
                 <h3>Why Choose Us</h3>
-                <p>We take pride in offering top-notch services for all your travel needs. From travel adapters to portable chargers and luggage tags, we have got you covered for your every journey. Our range of travel adapters ensures that you can charge your devices effortlessly in any part of the world. With our adapters, you will stay connected and keep your gadgets fully charged, making your travel experiences stress-free and enjoyable.</p>
+                <p>We take pride in offering top-notch services for all your travel needs. From travel adapters to
+                    portable chargers and luggage tags, we have got you covered for your every journey. Our range of
+                    travel adapters ensures that you can charge your devices effortlessly in any part of the world. With
+                    our adapters, you will stay connected and keep your gadgets fully charged, making your travel
+                    experiences stress-free and enjoyable.</p>
             </div>
             <div class="choose-card">
                 <div class="hotel">
                     <img src="Images/hotel 1.png" alt="">
                     <h4>Handpicked Hotels</h4>
-                    <p>There is a wide range of hotels whether you're looking for luxury accommodations, boutique hotels that suits your needs.</p>
+                    <p>There is a wide range of hotels whether you're looking for luxury accommodations, boutique hotels
+                        that suits your needs.</p>
                 </div>
                 <div class="map">
                     <img src="Images/map 1.png" alt="">
                     <h4>World Class Service</h4>
-                    <p>We are catering to specific niches such as adventure travel, luxury travel, eco-friendly travel, or cultural experiences.</p>
+                    <p>We are catering to specific niches such as adventure travel, luxury travel, eco-friendly travel,
+                        or cultural experiences.</p>
                 </div>
                 <div class="price">
                     <img src="Images/price-tag 1.png" alt="">
                     <h4>Best Price Guarantee</h4>
-                    <p>Our services can vary widely depending on several factors, including  the destination, the level of customization, and the overall quality of service. </p>
+                    <p>Our services can vary widely depending on several factors, including the destination, the level
+                        of customization, and the overall quality of service. </p>
                 </div>
             </div>
         </section>
@@ -152,7 +174,9 @@
         <section class="upcoming-tour-section">
             <div class="upcoming-tour">
                 <h3>Our Upcoming Tour</h3>
-                <p>We allows you to create an event and invite attendees to book travel attached to an event. This streamlines and organizes travel while giving companies control and insight into their travel program.</p>
+                <p>We allows you to create an event and invite attendees to book travel attached to an event. This
+                    streamlines and organizes travel while giving companies control and insight into their travel
+                    program.</p>
             </div>
             <div class="upcoming-list">
                 <div class="upcoming-image1">
@@ -167,7 +191,7 @@
                     <img src="Images/download.jpg" alt="">
                     <p>Italy || 01 June 2024</p>
                 </div>
-              
+
             </div>
             <div class="upcoming-list2">
                 <div class="upcoming-image4">
@@ -184,7 +208,36 @@
                 </div>
             </div>
         </section>
-       
+        <!--Simple Perfect Place Section-->
+        <section class="perfect-place">
+            <div class="simple-perfect-place">
+                <div class="perfect-text">
+                    <h3>A Simple Perfect Place To Get Lost</h3>
+                    <p>Our Travel place is depends on your personal preferences, interests, and the type of experience
+                        you're seeking.</p>
+                    <ul>
+                        <li>Relaxation and Beaches</li>
+                        <li>Nature and Adventure</li>
+                        <li>Historical and Architectural Marvels</li>
+                        <li>Northern Lights and Winter Activities</li>
+                    </ul>
+                    <button class="btn-primary">See More</button>
+                </div>
+                <div class="perfect-img">
+                    <img class="edit-img" src="Images/Rectangle 10.png" alt="">
+                    <h3>Watch Our Mountain in Bangladesh</h3>
+                    <div class="design">
+                        <hr class="line">
+                        <hr class="line2">
+                        <div class="frame1"><img src="Images/Frame.png">
+                        <p>0.00</p></div>
+                        <div class="volume"><img src="Images/volume-x 1.png" alt=""></div>
+                        <div class="max"><img src="Images/maximize 1.png" alt=""></div>
+                        <div class="frame2"><img src="Images/Frame (1).png" alt=""></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
