finished newsletter section

--- a/index.html
+++ b/index.html
@@ -238,6 +238,25 @@
                 </div>
             </div>
         </section>
+        <!--News Letter Section-->
+        <section class="newsletter">
+            <div class="news-text">
+                <h3>Newsletter</h3>
+                <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                <input type="text" placeholder="Enter your name">
+                <input type="email" placeholder="Enter your email">
+                <input class="btn-primary" type="button" value="Subscribe">
+            </div>
+            <div class="news-picture">
+                <div class="news-img">
+                    <img src="Images/Rectangle 8 (1).png" alt="">
+                    <div class="news-discount">
+                        <p>Travel.com</p>
+                        <h5>Save up to 70%</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
