finished footer design and responsive section

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 </div>
                 <div class="upcoming-image5">
                     <img src="Images/uk.jpg" alt="">
-                    <p>United Kingdom || 23 October 2024</p>
+                    <p>UK || 23 October 2024</p>
                 </div>
                 <div class="upcoming-image6">
                     <img src="Images/pathor.jpg" alt="">
@@ -258,7 +258,24 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <!--Footer Section-->
+    <footer class="footer">
+        <div class="footer-logo">
+            <img src="Images/Group 40071 (2).png" alt="">
+            <p><span>Let's</span> E<span class="lets">x</span>pl<span class="world">o</span>re<span
+                    class="world">_World</span></p>
+        </div>
+        <div class="footer-p">
+            <p>Traveling solo can be an incredibly empowering and introspective experience. It allows us to push our boundaries, gain self-confidence, and learn to appreciate our own company.</p>
+        </div>
+        <div class="footer-img">
+            <img src="Images/Social.png" alt="">
+        </div>
+        <hr class="footer-line">
+        <div class="footer-h">
+            <h5>2024, &#xa9;All Rights Reserved.</h5>
+        </div>
+    </footer>
 </body>
 
 </html>
